--- a/public/usage.html
+++ b/public/usage.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE HTML>
 <html lang="en">
 
@@ -9,11 +8,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Manet</title>
 
-    <link rel="stylesheet" type="text/css" href="https://manet.herokuapp.com/css/pure-min.css">
-    <link rel="stylesheet" type="text/css" href="https://manet.herokuapp.com/css/app.css">
+    <link rel="icon" type="image/png" href="favicon.png">
 
-    <script type="text/javascript" src="https://manet.herokuapp.com/js/zepto.min.js"></script>
-    <script type="text/javascript" src="https://manet.herokuapp.com/js/app.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/pure-min.css">
+    <link rel="stylesheet" type="text/css" href="css/app.css">
+
+    <script type="text/javascript" src="js/zepto.min.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
 </head>
 
 <body>
