--- a/public/usage.html
+++ b/public/usage.html
@@ -20,7 +20,7 @@
 <body>
 
     <div class="header">
-        <h1><a href="https://github.com/vbauer/manet" title="Github">Manet</a></h1>
+        <h1><a href="https://github.com/vbauer/manet" title="Github">REALLY?</a></h1>
         <h2>Website screenshot service</h2>
     </div>
 
@@ -38,7 +38,7 @@
 
                 <div class="pure-control-group">
                     <label for="url">Site address</label>
-                    <input id="url" name="url" type="text" placeholder="URL" maxlength="1024" value="google.com" autofocus>
+                    <input id="url" name="url" type="text" placeholder="URL" maxlength="1024" value="http://needsupply.com/" autofocus>
                 </div>
 
                 <div class="pure-control-group">
