--- a/public/usage.html
+++ b/public/usage.html
@@ -20,8 +20,8 @@
 <body>
 
     <div class="header">
-        <h1><a href="https://github.com/vbauer/manet" title="Github">REALLY?</a></h1>
-        <h2>Website screenshot service</h2>
+        <h1>REALLY?</h1>
+        <h2>new comers</h2>
     </div>
 
     <div class="main">
