--- a/public/usage-0.html
+++ b/public/usage-0.html
@@ -10,164 +10,13 @@
 
     <link rel="icon" type="image/png" href="favicon.png">
 
+    <link rel="stylesheet" type="text/css" href="css/pure-min.css">
+    <link rel="stylesheet" type="text/css" href="css/app.css">
+
     <script type="text/javascript" src="js/zepto.min.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
 </head>
-<style>
-body {
-    margin: 0;
-    padding: 0;
-    width: 980px;
-    height: 460px;
-    background-color: #efefef;
-    font-family: 'Helvetica', "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", 'Arial', 'sans-serif';
-}
 
-.main {
-    width: 960px;
-    height: 640px;
-    background-color: #fff;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translateX(-50%) translateY(-50%);  
-}
-
-.logo-nogle {
-    position: absolute;
-    top: 20px;
-    left: 20px;
-    z-index: 15;
-    width: 100px;
-}
-
-.image-block {
-    position: relative;
-    text-align: center;
-    width:480px; 
-    height:640px;
-}
-
-
-.uploader {
-    overflow:hidden;  
-}
-
-.uploader.bg {
-    width:480px; 
-    height:640px;
-    background-color: rgb(0, 72, 139); 
-}
-
-.uploader h3 {
-    position: relative;  
-    color: #ccc;
-    font-size: 14px;
-    padding-top: 550px;
-    font-weight: 100;
-    z-index: 3;
-}
-
-#fileBg,
-#filePhoto,
-.uploader img {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-}
-
-#fileBg,
-#filePhoto {
-    z-index: 10;
-    opacity: 0;
-    border: 0;
-    outline: none;
-    cursor: pointer;
-}
-
-.uploader img {
-    z-index:1;
-    border:none;
-    display: none;
-    object-fit: cover;
-    
-}
-.uploader.bg img {
-    height: 640px;
-    width: 100%;
-    mix-blend-mode: screen;
-}
-.uploader.bg:after {
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    z-index: 2;
-    background-color: rgba(0, 72, 139, 0.3);
-    mix-blend-mode: multiply;
-}
-
-.uploader.portrait {
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
-    background-color: #333;
-    position: absolute;
-    top: 150px;
-    left: calc(50% - 75px);
-    z-index: 10;
-}
-
-.info {
-    position: absolute;
-    top: 320px;
-    z-index: 10;
-    text-align: center;
-    width: 250px;
-    left: calc(50% - 125px);
-}
-
-.info input {
-    width: 250px;
-    margin: auto;
-    text-align: center;
-    font-weight: 100;
-    box-sizing: border-box;
-}
-
-.info input:focus {
-    outline: none;
-    border-bottom: 1px dotted rgba(255,255,255,0.5) !important;
-}
-
-.info input::-webkit-input-placeholder {
-    color: #f5f5f5;
-}
-
-.info input.name {
-    background: transparent;
-    border: 0;
-    outline: none;
-    font-size: 21px;
-    color: #fff;
-    margin: 15px 0;
-    font-weight: 400;
-}
-
-.info input.title {
-    background: #014885;
-    border: 0;
-    outline: none;
-    font-size: 15px;
-    color: #fff;
-    padding: 8px 10px;
-}
-
-</style>
 <body>
 
     <div class="header">
@@ -189,7 +38,7 @@ body {
 
                 <div class="pure-control-group">
                     <label for="url">Site address</label>
-                    <input id="url" name="url" type="text" placeholder="URL" maxlength="1024" value="/" autofocus>
+                    <input id="url" name="url" type="text" placeholder="URL" maxlength="1024" value="http://needsupply.com/" autofocus>
                 </div>
 
                 <div class="pure-control-group">
